# PointsToTree

./: pyproject.toml
dataset/: CERL_027_AFXML.xml
notebooks/: demo.ipynb  piSystems.ipynb
pointstotree/: point_tree.py
