[tool.poetry]
name = "pointstotree"
version = "0.1.0"
description = ""
authors = ["Hannah Eslinger <heslinge@nrel.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.0.3"
mypy = "^1.4.1"
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
